--- a/放大镜/index.html
+++ b/放大镜/index.html
@@ -4,7 +4,33 @@
 <meta charset="utf-8">
 <title>无标题文档</title>
 </head>
+<style>
+body{ margin:0px; padding:0px;}
+.box{ border:1px solid red;height:500px; margin-top:100px; margin-left:50px;}
+</style>
+
+
+<script>
+
+
+</script>
+
+
 
 <body>
+
+
+    <div class="box">
+        <>
+    
+    </div>
+
+
+
+
+
+
+
+
 </body>
 </html>
