--- a/navigator/navigator.vibrate.html
+++ b/navigator/navigator.vibrate.html
@@ -11,11 +11,13 @@
 
 
 <script>
+alert(navigator.vibrate);
+window.navigator.vibrate(10000000000000000); // 震动1000毫秒(ms) 也就是一秒
 
 
+//window.navigator.vibrate(10000000000000000); // 震动1000毫秒(ms) 也就是一秒
 
-window.navigator.vibrate(1000); // 震动1000毫秒(ms) 也就是一秒
-window.navigator.vibrate([100,30,100,30,100,200,200,30,200,30,200,200,100,30,100,30,100]); // 数组模式震动
+//window.navigator.vibrate([100,30,100,30,100,200,200,30,200,30,200,200,100,30,100,30,100]); // 数组模式震动
 
 
 
