--- a/window/window.applicationCache.html
+++ b/window/window.applicationCache.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html  manifest="demo.appcache">
 	<head>
-		<meta charset="{CHARSET}">
 		<title></title>
+        
 	</head>
 	<body>
 		<script type="text/javascript">
 			cache = window.applicationCache;
-			console.log(cache);
-			alert(window.devicePixelRatio);
-		</script>
+			console.dir(cache);
 		
+		</script>
+		123
 	</body>
 </html>
